# NewsBoard

./: .gitignore  README.md  docker-compose.yaml  linters.sh  pyproject.toml
news_board/: Dockerfile  bg_worker.sh  manage.py  prod.sh  pyproject.toml
news_board/board/: models.py  serializers.py  tasks.py  urls.py  views.py
news_board/board/migrations/: 0001_initial.py  0002_auto_20200724_1056.py  0003_auto_20200724_1856.py
news_board/news_board/: celery.py  settings.py  urls.py  wsgi.py
