[tool.poetry]
name = "newsboard"
version = "0.1.0"
description = ""
authors = ["rostislav <rostmoguchiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
djangorestframework = "^3.11.0"
psycopg2 = "^2.8.5"
black = "^19.10b0"
flake8 = "^3.8.3"
celery = {extras = ["django"], version = "^4.4.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
